<resources>
    <string name="app_name">MyDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мой ежедневник</string>
    <string name="nav_header_subtitle">https://github.com/ProgressiveArt and https://github.com/hackerdmitry</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="light">Датчик освещенности</string>
    <string name="menu_home">Домашняя страница</string>
    <string name="menu_records">Ежедневник</string>
    <string name="menu_sensors">Датчики</string>
    <string name="edit_page">Редактор</string>
    <string name="choose_img">Выберите изображение</string>
    <string name="home_second">Home Second</string>
    <string name="date_hint">Дата</string>
    <string name="date_button_hint">Указать дату</string>
    <string name="date_filter_button_hint">Указать дату для поиска</string>
    <string name="record_filter_hint">Поиск по дате</string>
    <string name="record_hint">Введите текст записи</string>
    <string name="save_text">Сохранить</string>
    <string name="add_text">Добавить</string>
    <string name="del_text">Удалить</string>
    <string name="get_img_from_device_text">Выбрать изображение с телефона</string>
    <string name="get_img_from_server_text">Выбрать изображение</string>
    <string name="about_title">About</string>
    <string name="exit_title">Выход</string>
    <string name="send_notifi_text">Отправить уведомление</string>
    <string name="count_threads">Узнать кол-во используемых сенсоров</string>
</resources>
