<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mydiary.MVC.controllers.fragmnets.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.mydiary.MVC.controllers.fragmnets.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_records"
        android:name="com.example.mydiary.MVC.controllers.fragmnets.records.RecordsListFragment"
        android:label="@string/menu_records"
        tools:layout="@layout/fragment_records_list" >
        <action
            android:id="@+id/action_nav_records_to_fragment_edit_record"
            app:destination="@id/fragment_edit_record" />
    </fragment>

    <fragment
        android:id="@+id/nav_sensors"
        android:name="com.example.mydiary.MVC.controllers.fragmnets.sensors.sensorsFragment"
        android:label="@string/menu_sensors"
        tools:layout="@layout/fragment_sensors" />
    <fragment
        android:id="@+id/fragment_edit_record"
        android:name="com.example.mydiary.MVC.controllers.fragmnets.records.EditRecordFragment"
        android:label="@string/edit_page"
        tools:layout="@layout/fragment_edit_record" />
</navigation>